--- a/structural/facade/index.html
+++ b/structural/facade/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="adapter.js"></script>
+    <script src="facade.js"></script>
   </body>
 </html>
