--- a/behavioral/chain+/index.html
+++ b/behavioral/chain+/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./abstractFactory.js"></script>
+    <script src="./myChain.js"></script>
   </body>
 </html>
