--- a/behavioral/command+/index.html
+++ b/behavioral/command+/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="factory.js"></script>
+    <script src="./myCommand.js"></script>
 </body>
 </html>
